--- a/src/app/pages/config/config.page.html
+++ b/src/app/pages/config/config.page.html
@@ -12,4 +12,10 @@
   <br><br>
   <ion-button expand='full' (click)='forceReconnectionToServer()'>Conectarse al iPad</ion-button>
   <br><br>
+  <ion-button expand='full' (click)='playSound("pizza")'>Play pizza</ion-button>
+  <br><br>
+  <ion-button expand='full' (click)='playSound("bar")'>Play bar</ion-button>
+  <br><br>
+  <ion-button expand='full' (click)='playSound("kitchen")'>Play kitchen</ion-button>
+  <br><br>
 </ion-content>
