--- a/src/app/pages/table/table.page.scss
+++ b/src/app/pages/table/table.page.scss
@@ -85,16 +85,27 @@ ion-content {
       -webkit-overflow-scrolling: touch;
       .article {
         --padding-start: 8px;
-        --min-height: 40px;
-        .name {
-          overflow: hidden;
-          text-overflow: ellipsis;
-          flex: 1;
-        }
-        .price {
-          margin-left: 20px;
-          width: 35px;
-          text-align: right;
+        .inner-article {
+          width: 100%;
+          display: flex;
+          padding: 8px 0; 
+          .left-side {
+            overflow: hidden;
+            text-overflow: ellipsis;
+            flex: 1;
+            .name {
+              font-weight: bold;
+            }
+            .article-infos {
+              padding-left: 10px;
+              font-style: italic;
+            }
+          }
+          .price {
+            margin-left: 20px;
+            width: 35px;
+            text-align: right;
+          }
         }
       }
     }
