--- a/src/app/pages/orders/orders.page.html
+++ b/src/app/pages/orders/orders.page.html
@@ -20,21 +20,26 @@
         <div *ngFor='let article of order.articles; let i = index' class='article'>
           <div class='quantity'>{{ article.q }}</div>
           <div>
-            {{menu.articles[article.ami].name}}
-            <div>{{article.infos}}</div>
-            <div *ngFor='let ingredientIndex of article.pii;'>
-              MAS {{menu.ingredients[ingredientIndex].name}}
-            </div>
-            <div *ngFor='let ingredientIndex of article.mii;'>
-              SIN {{menu.ingredients[ingredientIndex].name}}
-            </div>
-            <div *ngIf='article.half && article.half.ami != null'>
-              Mitad {{menu.articles[article.half.ami].name}}
-              <div *ngFor='let ingredientIndex of article.half.pii;'>
+            <div class='name'>{{menu.articles[article.ami].name}}</div>
+            <div class='infos'>
+              <div>{{article.infos}}</div>
+              <div>
+                <div *ngFor='let answerIndex of article.questionsAnswers;let i = index'>{{menu.articles[article.ami].questions[i].answers[answerIndex].text}}</div>
+              </div>
+              <div *ngFor='let ingredientIndex of article.mii;'>
+                SIN {{menu.ingredients[ingredientIndex].name}}
+              </div>
+              <div *ngFor='let ingredientIndex of article.pii;'>
                 MAS {{menu.ingredients[ingredientIndex].name}}
               </div>
-              <div *ngFor='let ingredientIndex of article.half.mii;'>
-                SIN {{menu.ingredients[ingredientIndex].name}}
+              <div *ngIf='article.half && article.half.ami != null'>
+                Mitad {{menu.articles[article.half.ami].name}}
+                <div *ngFor='let ingredientIndex of article.half.mii;'>
+                  SIN {{menu.ingredients[ingredientIndex].name}}
+                </div>
+                <div *ngFor='let ingredientIndex of article.half.pii;'>
+                  MAS {{menu.ingredients[ingredientIndex].name}}
+                </div>
               </div>
             </div>
           </div>
