--- a/src/app/pages/waiter/waiter-select-food/waiter-select-food.page.scss
+++ b/src/app/pages/waiter/waiter-select-food/waiter-select-food.page.scss
@@ -42,26 +42,23 @@ ion-select {
       -webkit-overflow-scrolling: touch;
       .article {
         --padding-start: 8px;
-        --min-height: 40px;
-        .nb-articles {
-          text-align: right;
-          width: 20px;
-          margin-right: 8px;
-        }
-        .name {
-          overflow: hidden;
-          text-overflow: ellipsis;
-          flex: 1;
-        }
-        .unit-price {
-          width: 35px;
-          text-align: right;
-          margin-left: 10px;
-        }
-        .price {
-          margin-left: 20px;
-          width: 35px;
-          text-align: right;
+        .inner-article {
+          width: 100%;
+          padding: 8px 0;
+          .name {
+            font-weight: bold;
+            overflow: hidden;
+            text-overflow: ellipsis;
+          }
+          .article-infos {
+            padding-left: 10px;
+            font-style: italic;
+          }
+          .price {
+            margin-left: 20px;
+            width: 35px;
+            text-align: right;
+          }
         }
       }
     }
