--- a/src/app/pages/restaurant/restaurant.page.html
+++ b/src/app/pages/restaurant/restaurant.page.html
@@ -58,10 +58,10 @@
         </div>
       </div>
       <div class='llevar'>
-        <ion-button [color]='getTableColor(30)' (click)='openTable(30)'>Bar</ion-button>
+        <ion-button [color]='getTableColor(34)' (click)='openTable(34)'>Bar llevar</ion-button>
+        <ion-button [color]='getTableColor(33)' (click)='openTable(33)'>Viene a buscar</ion-button>
         <ion-button [color]='getTableColor(31)' (click)='openTable(31)'>Komida</ion-button>
         <ion-button [color]='getTableColor(32)' (click)='openTable(32)'>Fito</ion-button>
-        <ion-button [color]='getTableColor(33)' (click)='openTable(33)'>Para llevar</ion-button>
         <ion-button (click)='openOverview()'>Pedidos en curso</ion-button>
       </div>
     </div>
@@ -72,6 +72,7 @@
       <ion-button [color]='getTableColor(27)' (click)='openTable(27)'>18</ion-button>
       <ion-button [color]='getTableColor(28)' (click)='openTable(28)'>19</ion-button>
       <ion-button [color]='getTableColor(29)' (click)='openTable(29)'>20</ion-button>
+      <ion-button [color]='getTableColor(30)' (click)='openTable(30)'>Bar</ion-button>
       <img style='width: 80px;position: absolute;bottom: 4px;' src='../../assets/seb.png' />
     </div>
   </div>
