--- a/src/app/pages/table/table.page.scss
+++ b/src/app/pages/table/table.page.scss
@@ -103,7 +103,7 @@ ion-content {
           }
           .price {
             margin-left: 20px;
-            width: 35px;
+            //width: 35px;
             text-align: right;
           }
         }
