--- a/src/app/pages/totaltoday/totaltoday.page.html
+++ b/src/app/pages/totaltoday/totaltoday.page.html
@@ -32,6 +32,7 @@
           <span slot="end">{{data.openedTables | number}}</span>
         </ion-item>
       </ion-list>
+      <ion-button expand='full' (click)='print()'>Imprimir</ion-button>
       <ion-button expand='full' (click)='closeSession()'>Cerrar session</ion-button>
     </ion-card-content>
   </ion-card>
