--- a/src/app/pages/waiter/waiter-select-table/waiter-select-table.page.html
+++ b/src/app/pages/waiter/waiter-select-table/waiter-select-table.page.html
@@ -63,6 +63,15 @@
     </div>
     <div class='bar'>
       <div class='button click-effect' [class.opened]='openedTables[30]' (click)='openTable(30)'>Bar</div>
+      <br><br>
+      <div class='button click-effect' [class.opened]='openedTables[31]' (click)='openTable(31)'>Komida</div>
+      <br><br>
+      <div class='button click-effect' [class.opened]='openedTables[32]' (click)='openTable(32)'>Fito</div>
+      <br><br>
+      <div class='button click-effect' [class.opened]='openedTables[33]' (click)='openTable(33)'>Viene a buscar</div>
+      <br><br>
+      <div class='button click-effect' [class.opened]='openedTables[34]' (click)='openTable(34)'>Bar llevar</div>
+      <br><br>
     </div>
   </div>
 </ion-content>
