--- a/src/app/pages/waiter/waiter-select-food/waiter-select-food.page.html
+++ b/src/app/pages/waiter/waiter-select-food/waiter-select-food.page.html
@@ -86,6 +86,30 @@
           </ion-item>
         </div>
       </ion-list>
+      <ion-item class='delivery' *ngIf='table.withDelivery'>
+        <ion-label>Delivery</ion-label>
+        <ion-select [(ngModel)]='table.bills[this.selectedBillIndex].delivery'>
+          <ion-select-option [value]="0">0</ion-select-option>
+          <ion-select-option [value]="50">50</ion-select-option>
+          <ion-select-option [value]="50">60</ion-select-option>
+          <ion-select-option [value]="70">70</ion-select-option>
+          <ion-select-option [value]="80">80</ion-select-option>
+          <ion-select-option [value]="90">90</ion-select-option>
+          <ion-select-option [value]="100">100</ion-select-option>
+          <ion-select-option [value]="110">110</ion-select-option>
+          <ion-select-option [value]="120">120</ion-select-option>
+          <ion-select-option [value]="130">130</ion-select-option>
+          <ion-select-option [value]="140">140</ion-select-option>
+          <ion-select-option [value]="150">150</ion-select-option>
+          <ion-select-option [value]="160">160</ion-select-option>
+          <ion-select-option [value]="170">170</ion-select-option>
+          <ion-select-option [value]="180">180</ion-select-option>
+          <ion-select-option [value]="190">190</ion-select-option>
+          <ion-select-option [value]="200">200</ion-select-option>
+          <ion-select-option [value]="250">250</ion-select-option>
+          <ion-select-option [value]="300">300</ion-select-option>
+        </ion-select>
+      </ion-item>
       <ion-list lines='full'>
         <ion-item>
           <ion-checkbox slot="start" [(ngModel)]='table.bills[currentBillIndex].service'></ion-checkbox>
@@ -98,7 +122,7 @@
       </ion-list>
       <ion-list lines='full'>
         <ion-item (click)='askForBill()' color='primary' class='click-effect total'>
-          <ion-label><span class='nb'>{{billService.getTotal(table.bills[currentBillIndex]) | number}}</span></ion-label>
+          <ion-label><span class='nb'>{{billService.getTotal(table.bills[currentBillIndex]) + table.bills[this.selectedBillIndex].delivery | number}}</span></ion-label>
         </ion-item>
       </ion-list>
     </div>
