--- a/src/app/pages/overview/overview.page.html
+++ b/src/app/pages/overview/overview.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-segment [(ngModel)]='device' (ionChange)="changedDevice($event)">
+    <ion-segment [(ngModel)]='device' (ionChange)="changedDevice()">
       <ion-segment-button value="pizza">
         <ion-label>Pizza</ion-label>
       </ion-segment-button>
