--- a/src/app/pages/table/table.page.html
+++ b/src/app/pages/table/table.page.html
@@ -100,11 +100,11 @@
               {{table.bills[this.selectedBillIndex].newBatch.waiterName}} - {{table.bills[this.selectedBillIndex].newBatch.date}}
             </ion-label>
           </ion-item-divider>
-          <ion-button (click)='sendToKitchen()' expand='full' color='success'>Enviar</ion-button>
+          <ion-button (click)='sendToKitchen()' expand='full' color='success'>Confirmar</ion-button>
           <ion-item *ngFor='let article of table.bills[this.selectedBillIndex].newBatch.articles; let i = index' class='article click-effect' (click)='modifyArticle(table.bills[this.selectedBillIndex].newBatch, i)'>
             <div class='inner-article'>
               <div class='left-side'>
-                <div class='name'>{{menu.articles[article.ami].name}}</div>
+                <div class='name'>{{article.q}} {{menu.articles[article.ami].name}}</div>
                 <div class='article-infos'>
                   <div>{{article.infos}}</div>
                   <div>
@@ -140,7 +140,7 @@
           <ion-item *ngFor='let article of batch.articles; let i = index' class='article click-effect' (click)='modifyArticle(batch, i)'>
             <div class='inner-article'>
               <div class='left-side'>
-                <div class='name'>{{menu.articles[article.ami].name}}</div>
+                <div class='name'>{{article.q}} {{menu.articles[article.ami].name}}</div>
                 <div class='article-infos'>
                   <div>{{article.infos}}</div>
                   <div>
@@ -163,7 +163,7 @@
                   </div>
                 </div>
               </div>
-              <div class='price'>{{billService.getArticlePrice(article)}}</div>
+              <div class='price'>{{billService.getArticlePrice(article) * article.q}}</div>
             </div>
           </ion-item>
         </div>
@@ -196,18 +196,18 @@
       </ion-list>
       <ion-list class='taxes' lines='full'>
         <ion-item class='service'>
-          <ion-checkbox slot="start" [(ngModel)]='table.bills[this.selectedBillIndex].service'></ion-checkbox>
-          <ion-label>Servicio <span>{{billService.getService(table.bills[this.selectedBillIndex]) | number}}</span></ion-label>
+          <ion-checkbox slot="start" [(ngModel)]='table.bills[this.selectedBillIndex].hasService' (ionChange)='updateTotalPrice()'></ion-checkbox>
+          <ion-label>Servicio <span>{{table.bills[this.selectedBillIndex].service | number}}</span></ion-label>
         </ion-item>
         <ion-item>
-          <ion-checkbox slot="start" [(ngModel)]='table.bills[this.selectedBillIndex].itbis'></ion-checkbox>
-          <ion-label>ITBIS <span>{{billService.getItbis(table.bills[this.selectedBillIndex]) | number}}</span></ion-label>
+          <ion-checkbox slot="start" [(ngModel)]='table.bills[this.selectedBillIndex].hasItbis' (ionChange)='updateTotalPrice()'></ion-checkbox>
+          <ion-label>ITBIS <span>{{table.bills[this.selectedBillIndex].itbis | number}}</span></ion-label>
         </ion-item>
       </ion-list>
       <ion-list lines='full'>
         <ion-item (click)='printBill()'color='primary' class='total'>
           <ion-button (click)='deleteBill();$event.stopPropagation();' style='margin-right:10px;'><ion-icon name="trash"></ion-icon></ion-button>
-          <ion-label>TOTAL <span class='nb'>{{billService.getTotal(table.bills[this.selectedBillIndex]) + table.bills[this.selectedBillIndex].delivery | number}}</span></ion-label>
+          <ion-label>TOTAL <span class='nb'>{{table.bills[this.selectedBillIndex].total + table.bills[this.selectedBillIndex].delivery | number}}</span></ion-label>
         </ion-item>
       </ion-list>
     </div>
