--- a/src/app/pages/user/user.page.html
+++ b/src/app/pages/user/user.page.html
@@ -16,7 +16,7 @@
   <ion-item>
     <ion-label>Cuenta</ion-label>
     <ion-select [compareWith]="compareWithFn" interface="alert" [(ngModel)]="user.device" (ionChange)='changedCategory()'>
-      <ion-select-option *ngFor='let device of deviceService._devices' [value]='device'>{{device.name}}</ion-select-option>
+      <ion-select-option *ngFor='let device of deviceService.getDevices()' [value]='device'>{{device.name}}</ion-select-option>
     </ion-select>
   </ion-item>
 </ion-content>
